Fix scrollbars appearing when they shouldn't.

--- a/source/scss/user-label-editor.scss
+++ b/source/scss/user-label-editor.scss
@@ -33,7 +33,7 @@
 
 .group {
   border: 1px solid var(--blue);
-  overflow: scroll;
+  overflow: hidden;
   padding: 16px;
 
   h2 {
@@ -41,7 +41,7 @@
     display: flex;
     gap: 8px;
     margin-bottom: 16px;
-    overflow: scroll;
+    overflow: auto;
   }
 
   input {
